[project]
name = "orienteering-accounts"
version = "0.1.0"
description = ""
authors = [
    {name = "Michal Kašpar"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4 (>=4.12.3,<5.0.0)",
    "crispy-bootstrap5 (>=2024.10,<2025.0)",
    "django (>=5.1.5,<6.0.0)",
    "django-anymail (>=12.0,<13.0)",
    "django-extensions (>=3.2.3,<4.0.0)",
    "django-filter (>=24.3,<25.0)",
    "django-redis (>=5.4.0,<6.0.0)",
    "ipython (>=8.31.0,<9.0.0)",
    "freezegun (>=1.5.1,<2.0.0)",
    "model-bakery (>=1.20.1,<2.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "pydantic (>=2.10.5,<3.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "xlsxwriter (>=3.2.1,<4.0.0)",
    "google-api-python-client (>=2.159.0,<3.0.0)",
    "google-auth-oauthlib (>=1.2.1,<2.0.0)",
    "requests-pkcs12 (>=1.25,<2.0)",
    "requests (>=2.32.3,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
